# glaunch

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
scripts/: release.js
src/: App.vue  components.d.ts  main.ts  router.ts  typed-router.d.ts  types.ts
src-tauri/: .env.production  Cargo.toml  config.production.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: game_manager.rs  lib.rs  main.rs
src-tauri/src/api/: battlenet_api.rs  epic_api.rs  mod.rs  steam_api.rs
src-tauri/src/auth/: battlenet.rs  epic.rs  mod.rs  server.rs  steam.rs
src-tauri/src/commands/: api.rs  auth.rs  games.rs  mod.rs  overlay.rs  settings.rs
src-tauri/src/db/: migrations.rs  mod.rs  queries.rs  schema.rs
src-tauri/src/db/migrations/: 001_initial_schema.sql
src-tauri/src/models/: mod.rs  types.rs
src-tauri/src/monitor/: game.rs  mod.rs
src-tauri/src/overlay/: mod.rs  process.rs  window.rs
src-tauri/src/services/: igdb.rs  metadata.rs  mod.rs  rawg.rs  updater.rs
src-tauri/src/utils/: acf.rs  cache.rs  executable_finder.rs  game_watcher.rs  logger.rs  mod.rs  paths.rs  secrets.rs  settings.rs  vdf.rs
src/api/: battlenet.ts  epic.ts  index.ts  steam.ts
src/assets/: index.css
src/components/: AddGameModal.vue  AppSettings.vue  GameBackground.vue  GameImage.vue  GamesList.vue  LoadingSpinner.vue  LogViewer.vue  SourcesList.vue
src/components/extends/: GameCard.vue  GameStatusCard.vue  GameTag.vue  Navbar.vue  Titlebar.vue
src/components/extends/background/: PatternBackground.vue  index.ts
src/components/ui/button/: index.ts
src/components/ui/input/: Input.vue
src/composables/: useAuth.ts  useHorizontalScroll.ts  useMediaPath.ts
src/composables/KeyboardPlugin/: config.ts  index.ts  store.ts  types.ts  useKeyboard.ts  useRegion.ts  useSound.ts  useZone.ts
src/layouts/: default.vue
src/lib/: Logger.ts
src/pages/: index.vue  list.vue  overlay.vue  settings.vue
src/pages/details/: [id].vue
src/stores/: app.ts  auth.ts  log.ts
