[package]
name = "glaunch"
version = "0.4.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "glaunch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
winreg = "0.50"
regex = "1.5"
lazy_static = "1.4"
walkdir = "2.3"
reqwest = { version = "0.11", features = ["json"] }
notify = "4.0"
tauri-plugin-dialog = "2"
sha2 = "0.10"
dirs = "5.0"
tauri-plugin-deep-link = "2"
url = "2.2.2"
base64 = "0.21"
parking_lot = "0.12"
urlencoding = "2.1.0"
dotenv = "0.15.0"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
semver = "1.0"
uuid = { version = "1.0", features = ["v4"] }
keyring = "1.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.2.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug"
]
